[tool.poetry]
name = "j5_zoloto"
version = "0.3.0"
description = "j5 integration for Zoloto computer vision"
authors = ["j5 contributors <j5api@googlegroups.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/j5api/j5-zoloto"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
    "Topic :: Education",
]

[tool.poetry.dependencies]
python = "^3.7"
j5 = {version = "^1.0.0.rc1", allow-prereleases = true}
zoloto = "^0.8.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8"
flake8-bugbear = "^21.4.3"
flake8-builtins = "^1.5.3"
flake8-commas = "^2.0"
flake8-comprehensions = "^3.2"
flake8-debugger = "^4.0"
flake8-docstrings = "^1.5"
flake8-isort = "^4.0"
flake8-mutable = "^1.2"
flake8-print = "^4.0.0"
flake8-todo = "^0.7.0"
mypy = "^0.910"
pytest = "^6.1"
pytest-cov = "^2.12"
sphinx = "^4.2"
sphinx-rtd-theme = "^1.0.0"
rope = "^0.19.0"
isort = {version = "^5.6",extras = ["pyproject"]}
m2r2 = "^0.3.1"
sphinx-autobuild = "^2021.3.14"
sphinx-autodoc-typehints = "^1.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
